@@ -4,6 +4,8 @@ Revision history for {{$dist->name}}
     - the has_test_pod, has_test_pod_coverage tests have been removed - they
       are classified as 'extra', and have been largely considered to be a bad
       idea anyway (these are often shipped as, and ought to be, in xt/)
+    - the extractable test has been removed, as it does nothing in dists
+      before there is a tarball present
 
 1.08      2013-07-15 17:59:47 PDT-0700 (Karen Etheridge)
     - documentation fixed to reflect what indicators are actually available
